<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Link Conversor</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="de">De:</string>
    <string name="para">Para:</string>
    <string name="calcular">Calcular</string>
    <string name="quantidade">Quantidade</string>
    <string name="resultado_lbl">Resultado:</string>
    <string name="resultado_edit">Resultado</string>
    <string name="opcoes_conversores">Conversores</string>
    
    <string-array name="valores_area">
        <item>Metro quadrado</item>
        <item>Acre</item>
        <item>Hectare</item>
    </string-array>
    
    

</resources>
